# qt_get_poi-osm

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: gh_docs_bot.yml_  quality_security.yml
cmake/: get_poi-osmConfig.cmake.in  qt_get_poi-osmConfig.cmake.in
include/: PoiOsm.hpp
schema/: get_poi-osm-schema-v1.json  qt_get_poi-osm-schema-v1.json
src/: PoiOsm.cpp  main.cpp
